working out js with minor id changes to html

--- a/index.html
+++ b/index.html
@@ -19,39 +19,33 @@
             <div id="display"></div>
             <div id="inputbtns">
                 <div id="btns">
-                    <button id="sqroot" class="btn">√</button>
-                    <button id="pi" class="btn">π</button>
+                    <button id="button" class="btn">√</button>
                     <button id="exponent" class="btn">^</button>
-                    <button id="factorial" class="btn">!</button>
-                </div>
-                <div id="btns">
-                    <button id="clear" class="btn">AC</button>
-                    <button id="parenthesis" class="btn">( )</button>
-                    <button id="percentage" class="btn">^</button>
+                    <button id="pi" class="btn">π</button>
                     <button id="divide" class="btn">/</button>
                 </div>
                 <div id="btns">
-                    <button id="seven" class="btn">7</button>
-                    <button id="eight" class="btn">8</button>
-                    <button id="nine" class="btn">9</button>
+                    <button id="number" class="btn">7</button>
+                    <button id="number" class="btn">8</button>
+                    <button id="number" class="btn">9</button>
                     <button id="multiply" class="btn">X</button>
                 </div>
                 <div id="btns">
-                    <button id="four" class="btn">4</button>
-                    <button id="five" class="btn">5</button>
-                    <button id="six" class="btn">6</button>
+                    <button id="number" class="btn">4</button>
+                    <button id="number" class="btn">5</button>
+                    <button id="number" class="btn">6</button>
                     <button id="subtract" class="btn">-</button>
                 </div>
                 <div id="btns">
-                    <button id="one" class="btn">1</button>
-                    <button id="two" class="btn">2</button>
-                    <button id="three" class="btn">3</button>
+                    <button id="number" class="btn">1</button>
+                    <button id="number" class="btn">2</button>
+                    <button id="number" class="btn">3</button>
                     <button id="sum" class="btn">+</button>
                 </div>
                 <div id="btns">
-                    <button id="zero" class="btn">0</button>
+                    <button id="number" class="btn">0</button>
                     <button id="dot" class="btn">.</button>
-                    <button id="backspace" class="btn">⌫</button>
+                    <button id="clear" class="btn">AC</button>
                     <button id="equal" class="btn">=</button>
                 </div>
             </div>
@@ -59,6 +53,7 @@
 
        <audio id="beep" src="beep.mp3"></audio>
        <audio id="boop" src="boop.mp3"></audio>
+       <audio id="calculating" src="calca.mp3"></audio>
     </div>
 
     <div id="footer">Made by Much_App for The Odin Project</div>
