--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
             <div id="display"></div>
             <div id="inputbtns">
                 <div id="btns">
-                    <button id="button" class="btn">√</button>
-                    <button id="exponent" class="btn">^</button>
+                    <button id="backspace" class="btn">Backspace</button>
+                    <button id="operand" class="btn">^</button>
                     <button id="pi" class="btn">π</button>
-                    <button id="divide" class="btn">/</button>
+                    <button id="operand" class="btn">/</button>
                 </div>
                 <div id="btns">
                     <button id="number" class="btn">7</button>
                     <button id="number" class="btn">8</button>
                     <button id="number" class="btn">9</button>
-                    <button id="multiply" class="btn">X</button>
+                    <button id="operand" class="btn">*</button>
                 </div>
                 <div id="btns">
                     <button id="number" class="btn">4</button>
                     <button id="number" class="btn">5</button>
                     <button id="number" class="btn">6</button>
-                    <button id="subtract" class="btn">-</button>
+                    <button id="operand" class="btn">-</button>
                 </div>
                 <div id="btns">
                     <button id="number" class="btn">1</button>
                     <button id="number" class="btn">2</button>
                     <button id="number" class="btn">3</button>
-                    <button id="sum" class="btn">+</button>
+                    <button id="operand" class="btn">+</button>
                 </div>
                 <div id="btns">
                     <button id="number" class="btn">0</button>
@@ -50,12 +50,12 @@
                 </div>
             </div>
         </div>
-
+        <button id='soundbtn' class="soundbtn">Toggle Sound</button>
        <audio id="beep" src="beep.mp3"></audio>
        <audio id="boop" src="boop.mp3"></audio>
        <audio id="calculating" src="calca.mp3"></audio>
     </div>
-
+    
     <div id="footer">Made by Much_App for The Odin Project</div>
     
 
